compiler-cli/src/new/snapshots/gleam__new__tests__new_with_default_template.snap
---
source: compiler-cli/src/new/tests.rs
expression: "crate::fs::read(path.join(\"gleam.toml\")).unwrap()"
---
name = "my_project"
version = "1.0.0"

# Fill out these fields if you intend to generate HTML documentation or publish
# your project to the Hex package manager.
#
# description = ""
# licences = ["Apache-2.0"]
# repository = { type = "github", user = "", repo = "" }
# links = [{ title = "Website", href = "" }]
#
# For a full reference of all the available options, you can have a look at
# https://gleam.run/writing-gleam/gleam-toml/.

[dependencies]
gleam_stdlib = ">= 0.34.0 and < 2.0.0"

[dev-dependencies]
gleeunit = ">= 1.0.0 and < 2.0.0"
